Add interface classes

--- a/Tyuiu.cources.programming.cpp/Tyuiu.cources.programming.cpp.vcxproj.filters
+++ b/Tyuiu.cources.programming.cpp/Tyuiu.cources.programming.cpp.vcxproj.filters
@@ -21,21 +21,13 @@
     <ClInclude Include="pch.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="resource.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Tyuiu.PryakhinaEN.Sprint0.Task2.V0.Lib.cpp">
+    <ClCompile Include="Tyuiu.cources.programming.cpp.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="pch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ResourceCompile Include="Tyuiu.PryakhinaEN.Sprint0.Task2.V0.Lib.rc">
-      <Filter>Resource Files</Filter>
-    </ResourceCompile>
   </ItemGroup>
 </Project>
