--- a/Tyuiu.cources.programming.cpp/Tyuiu.cources.programming.cpp.vcxproj
+++ b/Tyuiu.cources.programming.cpp/Tyuiu.cources.programming.cpp.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{51202384-c05c-4cf8-ab54-84ef347437d0}</ProjectGuid>
-    <RootNamespace>TyuiuPryakhinaENSprint0Task2V0Lib</RootNamespace>
+    <ProjectGuid>{18b654f9-190b-49e5-8f80-52163078af41}</ProjectGuid>
+    <RootNamespace>Tyuiucourcesprogrammingcpp</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -141,7 +141,6 @@
   <ItemGroup>
     <ClInclude Include="framework.h" />
     <ClInclude Include="pch.h" />
-    <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -150,15 +149,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="Tyuiu.PryakhinaEN.Sprint0.Task2.V0.Lib.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Tyuiu.cources.programming.cpp\Tyuiu.cources.programming.cpp.vcxproj">
-      <Project>{18b654f9-190b-49e5-8f80-52163078af41}</Project>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <ResourceCompile Include="Tyuiu.PryakhinaEN.Sprint0.Task2.V0.Lib.rc" />
+    <ClCompile Include="Tyuiu.cources.programming.cpp.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
